# fymo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  README_SSR.md  RESTRUCTURING_PLAN.md  ensure_runtime.py  fymo_cli.py  generate.py  js_runtime.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rigids.py  server.py  setup.py  svelte_compiler.py
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  commands.py  main.py  utils.py
compiler/: sveltizer.js
controllers/: index.py
controllers/comments/: edit.py  index.py  test.py
controllers/hey/: hey.py
controllers/movie/: index.py  pin.py
controllers/posts/: index.py
docs/: conventions.md  deployment.md
embeds/: __init__.py  copy.py  is_asset.py  read.py  zip.py
examples/blog_app/: .gitignore  README.md  fymo.yml  node_modules  package-lock.json  package.json  requirements.txt  server.py  tsconfig.json
examples/todo_app/: .gitignore  README.md  fymo.yml  node_modules  package-lock.json  package.json  requirements.txt  server.py  tsconfig.json
fymo/: __init__.py  __version__.py  testing.py
fymo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fymo/auth/: __init__.py  codegen.py  context.py  discovery.py  email.py  identity.py  passwords.py  postgres_store.py  public.py  remote.py  schema.sql  schema_postgres.sql  session.py  store.py  verify_token.py
fymo/broadcast/: __init__.py  codegen.py  discovery.py  sse.py
fymo/bundler/: runtime_builder.py
fymo/cli/: __init__.py  main.py  render.py  writer.py
fymo/core/: __init__.py  app_discovery.py  assets.py  bundler.py  compiler.py  component_resolver.py  config.py  exceptions.py  expose.py  html.py  http.py  logging.py  manifest_cache.py  media.py  middleware.py  page_auth.py  providers.py  ratelimit.py  router.py  runtime.py  schema.py  server.py  sidecar.py  soft_nav.py  ssr_controller.py  template_renderer.py  tmponkg58wn.mjs
fymo/jobs/: __init__.py  decorators.py  discovery.py  lifecycle.py
fymo/remote/: __init__.py  adapters.py  codegen.py  context.py  cookies.py  decorators.py  devalue.py  discovery.py  errors.py  identity.py  mode.py  pagination.py  rate_limit.py  router.py  typemap.py
fymo/server/: dev.py  granian_server.py  gunicorn.py
fymo/storage/: __init__.py  base.py  registry.py
fymo/utils/: __init__.py  colors.py
journal/: journal_001.md  journal_002.md  journal_003.md  journal_004.md  journal_005.md  journal_006.md  journal_007.md  journal_008.md  journal_009.md  journal_010.md  journal_011.md  journal_012.md  journal_013.md  journal_014.md  journal_015.md  journal_016.md  journal_017.md  journal_018.md  journal_019.md  journal_020.md  journal_021.md  journal_022.md  journal_023.md  journal_024.md  journal_025.md  journal_026.md  journal_027.md  journal_028.md  journal_029.md  journal_030.md  journal_031.md  journal_032.md  journal_033.md  journal_034.md  journal_035.md  journal_036.md  journal_037.md  journal_038.md  journal_039.md  journal_040.md  (+5 more)
routes/: config.py  routes.yml
templates/comments/: edit.svelte  index.svelte  show.svelte  test.svelte
templates/hey/: hey.svelte
templates/movie/: chat.svelte  index.svelte  pin.svelte
templates/posts/: edit.svelte  index.svelte  show.svelte
tests/: conftest.py
tests/auth/: test_auth_discovery.py  test_clerk.py  test_clerk_config.py  test_clerk_packaging.py  test_context.py  test_email_verification.py  test_enumeration.py  test_identities.py  test_identity.py  test_identity_client_codegen.py  test_identity_extras.py  test_identity_uid_extras.py  test_oauth.py  test_password_reset.py  test_passwords.py  test_postgres_store.py  test_providers.py  test_public_identity.py  test_remote_e2e.py  test_resolvers.py  test_secure_flag.py  test_session.py  test_store.py  test_store_conformance.py
tests/broadcast/: test_channel_key.py  test_codegen.py  test_discovery.py  test_publish.py  test_publish_validation.py  test_sse.py
tests/cli/: test_destroy.py  test_dev.py  test_generate_auth.py  test_generators.py  test_init.py  test_jobs_status.py  test_jobs_worker.py  test_new.py  test_new_baseline.py  test_render.py  test_schema_provider_tables.py  test_template_overrides.py  test_version.py  test_writer.py
tests/core/: test_app_discovery.py  test_app_http_routes.py  test_assets.py  test_auth_boot_extras.py  test_auth_config_removed.py  test_config_env_interpolation.py  test_config_jobs.py  test_config_media.py  test_config_storage_expose.py  test_config_typed_values.py  test_dotenv_loading.py  test_error_page_xss.py  test_expose.py  test_html.py  test_logging.py  test_manifest_cache.py  test_media.py  test_middleware.py  test_page_auth.py  test_providers.py  test_pyproject_extras.py  test_remote_error_status_mapping.py  test_remote_mode_startup.py  test_router_softnav.py  test_schema_objects.py  test_secret_loading.py  test_security_defaults.py  test_sidecar.py  test_soft_nav_identity.py  test_soft_nav_redirect.py  test_ssr_controller.py  test_template_renderer_404.py  test_template_renderer_identity.py  test_template_renderer_layouts.py  test_template_renderer_redirect.py
tests/integration/: _seed_helpers.py  test_access_log.py  test_blog_auth.py  test_blog_broadcast.py  test_blog_db_concurrency.py  test_blog_e2e.py  test_blog_pagination.py  test_cli_build.py  test_dev_watcher.py  test_dist_serving.py  test_fresh_install_smoke.py  test_generators_e2e.py  test_healthz.py  test_hydration_real.py  test_identity_boundary.py  test_layout_system_e2e.py  test_middleware_integration.py  test_new_scaffold_build.py  test_page_require_auth.py  test_provider_tables_pg.py  test_reactive_route_state.py  test_redirect_hydration.py  test_redirect_ssr_e2e.py  test_remote_b64url.py  test_remote_codegen_e2e.py  test_remote_e2e.py  test_remote_import.py  test_request_flow.py  test_root_static_and_404.py  test_route_params.py  test_scaffold_build.py  test_soft_nav.py  test_ssr_auth.py
tests/jobs/: test_discovery.py  test_job_runner.py  test_lifecycle_logging.py  test_provider_singleton.py  test_task_decorator.py
(+171 files in other folders)
